mlnba-deployment/k8s/mlnba-backend-deployment.yaml
  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'mlnba-backend-deployment'
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mlnba-backend
  template:
    metadata:
      labels:
        component: mlnba-backend
    spec:
        containers:
          - name: mlnba-api
            image: marc06210/mlnba-backend
            ports:
              - containerPort: 8080
