mlnba-deployment/k8s/mlnba-backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlnba-backend-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: mlnba-backend
  ports:
   - port: 8080
     targetPort: 8080
