mlnba-deployment/k8s/mlnba-frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlnba-frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mlnba-frontend
  ports:
    - port: 4200
      targetPort: 4200
