mlnba-deployment/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: mlnba-frontend-cluster-ip-service
              servicePort: 4200
          - path: /api/?(.*)
          # UPDATE THIS LINE ABOVE
            backend:
              serviceName: mlnba-backend-server-cluster-ip
              servicePort: 8080
